fix width on smaller screens

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ p {
   }
 
   .intro-container .two-thirds, .intro-container .third {
-    width: 100%;
+    width: 80%;
   }
 
   .intro-text {
